--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello!</title>
+    <title>Landon Hotel</title>
 </head>
 <body>
-    <h1>Welcome</h1>
+    <h1>Welcome to Landon Hotel</h1>
+
+    <a href="/reservations">Room reservations</a>
 </body>
 </html>
