--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Welcome to Landon Hotel</h1>
 
-    <a href="/reservations">Room reservations</a>
+    <a href="/reservations">Room Reservations</a>
 </body>
 </html>
